additional vocab handling

--- a/mpttoktest.ipynb
+++ b/mpttoktest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3e3b4d5c-7af3-487c-a5ca-e095eb4a6576",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "80008273",
    "metadata": {},
    "outputs": [],
@@ -22,42 +22,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "522195b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[12092,\n",
-       " 13,\n",
-       " 309,\n",
-       " 717,\n",
+       "[50277,\n",
+       " 10394,\n",
+       " 187,\n",
+       " 5658,\n",
+       " 1472,\n",
        " 247,\n",
-       " 288,\n",
-       " 20255,\n",
-       " 81,\n",
-       " 1020,\n",
+       " 9371,\n",
+       " 14980,\n",
        " 13372,\n",
-       " 14931,\n",
+       " 22692,\n",
        " 99,\n",
        " 233,\n",
-       " 285,\n",
-       " 309,\n",
-       " 717,\n",
-       " 1060,\n",
-       " 281,\n",
-       " 1361,\n",
-       " 2]"
+       " 326,\n",
+       " 13052,\n",
+       " 802,\n",
+       " 13511,\n",
+       " 261,\n",
+       " 50278]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tinp = \"Hello, I am a hélpful assistant🤖 and I am here to help!\"\n",
+    "tinp = \"<|im_start|>system\\nyou're a helpful AI assistant 🤖 that likes emojis<|im_end|>\"\n",
     "e = mptchattok.encode(tinp)\n",
     "e.ids"
    ]
